<resources>
    <string name="app_name">GitHubUserAppDicoding</string>
    <string name="default_text_name_of_github_user">Name of Github User</string>
    <string name="default_username_of_github_user">Username of Github User</string>
    <string name="image">IMAGE</string>
    <string name="repositories">Repositories 0</string>
    <string name="amount_followers">0 followers</string>
    <string name="amount_following">0 following</string>
    <string name="default_location">Jakarta, Indonesia</string>
    <string name="default_company">Company</string>
    <string name="title_app">Github User App</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="not_found_data">Data tidak ditemukan</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
</resources>