<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".ui.contents.githubusers.activities.DetailGithubUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_image_github_user"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_github"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFF"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_name"
        android:text="@string/default_text_name_of_github_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/civ_image_github_user"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/default_username_of_github_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_repository"
        android:src="@drawable/icon_repository"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/iv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintEnd_toStartOf="@id/tv_amount_repository"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_amount_repository"
        android:text="@string/repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/iv_repository"
        app:layout_constraintBottom_toBottomOf="@id/iv_repository"
        app:layout_constraintStart_toEndOf="@id/iv_repository"
        app:layout_constraintEnd_toEndOf="@id/tv_username"
        />

    <ImageView
        android:id="@+id/iv_followers"
        android:src="@drawable/icon_followers"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintEnd_toStartOf="@id/tv_amount_followers"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_amount_followers"
        android:text="@string/amount_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/iv_followers"
        app:layout_constraintBottom_toBottomOf="@id/iv_followers"
        app:layout_constraintStart_toEndOf="@id/iv_followers"
        app:layout_constraintEnd_toStartOf="@id/tv_amount_following"
        />

    <TextView
        android:id="@+id/tv_amount_following"
        android:text="@string/amount_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/iv_followers"
        app:layout_constraintBottom_toBottomOf="@id/iv_followers"
        app:layout_constraintStart_toEndOf="@id/tv_amount_followers"
        app:layout_constraintEnd_toEndOf="@id/tv_username"
        />

    <ImageView
        android:id="@+id/iv_location"
        android:src="@drawable/icon_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/tv_location"
        app:layout_constraintTop_toBottomOf="@id/iv_repository"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_location"
        android:text="@string/default_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/iv_location"
        app:layout_constraintBottom_toBottomOf="@id/iv_location"
        app:layout_constraintStart_toEndOf="@id/iv_location"
        app:layout_constraintEnd_toEndOf="@id/tv_username"/>

    <ImageView
        android:id="@+id/iv_company"
        android:src="@drawable/icon_company"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_location"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintEnd_toStartOf="@id/tv_company"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_company"
        android:text="@string/default_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/iv_company"
        app:layout_constraintBottom_toBottomOf="@id/iv_company"
        app:layout_constraintStart_toEndOf="@id/iv_company"
        app:layout_constraintEnd_toEndOf="@id/tv_username"/>

</androidx.constraintlayout.widget.ConstraintLayout>